<resources>
    <string name="app_name" translatable="false">IPTV Neon Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="toast_added_favorite">This channel has been added to your favorites.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_title_favorite">Add to favorites?</string>
    <string name="activity_name_all_channels">All channels</string>
    <string name="menu_select">Select</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_remove_all">Remove all</string>
    <string name="menu_sort_alphabetically">Alphabetically</string>
    <string name="menu_sort_alphabetically_reverse">Alphabetically (Reverse)</string>
    <string name="menu_sort_original">Original</string>
    <string name="menu_sort_original_reverse">Original (Reverse</string>
    <string name="toast_video_player_not_installed">The selected video player is not installed.</string>
    <string name="activity_name_favorite">Favorite channels</string>
    <string name="dialog_title_remove_favorite">Remove from favorites?</string>
    <string name="toast_favorite_removed">This channel has been removed from your favorites.</string>
    <string name="activity_name_playlist">Playlist</string>
    <string name="toast_playlist_selected">This playlist has been selected.</string>
    <string name="dialog_title_edit_playlist">Edit playlist</string>
    <string name="toast_url_cannot_be_empty">The URL cannot be empty.</string>
    <string name="dialog_add_playlist">Add playlist</string>
    <string name="activity_name_recent">Recent channels</string>
    <string name="dialog_remove_recent">Remove from recents?</string>
    <string name="toast_recent_removed">This channel has been removed from your recent channels.</string>
    <string name="activity_name_settings">Settings</string>
    <string name="activity_settings_video_player">Video player</string>
    <string name="activity_settings_video_player_default">Default</string>
    <string name="activity_settings_theme">Theme</string>
    <string name="activity_settings_light_theme">Light</string>
    <string name="activity_settings_theme_red">Red</string>
    <string name="activity_settings_theme_green">Green</string>
    <string name="activity_settings_theme_blue">Blue</string>
    <string name="activity_settings_theme_pink">Pink</string>
    <string name="activity_settings_dark_theme">Dark</string>
    <string name="fun_for_everyone">Fun for everyone!</string>
</resources>
