<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_channels">
        <item
            android:id="@+id/nav_all_channels"
            android:icon="@drawable/outline_home_24"
            android:title="@string/activity_name_all_channels" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/outline_favorite_border_24"
            android:title="@string/activity_name_favorite" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/outline_list_24"
            android:title="@string/activity_name_recent" />
    </group>
    <group
        android:id="@+id/group_configuration">
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/baseline_playlist_play_24"
            android:title="@string/activity_name_playlist" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/outline_settings_24"
            android:title="@string/activity_name_settings" />
    </group>

</menu>
